--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1301,6 +1301,7 @@ config TOUCHSCREEN_GT9XX_v28
           If unsure, say N.
 
 source "drivers/input/touchscreen/gt9xx_v2.8/Kconfig"
+source "drivers/input/touchscreen/FT5436/Kconfig"
 
 config TOUCHSCREEN_HIMAX_CHIPSET
 	bool "Himax touchpanel CHIPSET"
