--- a/arch/arm64/boot/dts/qcom/karate/msm8937-pmi8950-karate.dtsi
+++ b/arch/arm64/boot/dts/qcom/karate/msm8937-pmi8950-karate.dtsi
@@ -45,7 +45,7 @@
         qcom,platform-regulator-settings = [02 09 03 00 20 00 01];
 };
 
-&pmi8950_charger {
+&qpnp_smbcharger {
         qcom,battery-data = <&qrd_batterydata>;
         qcom,float-voltage-mv = <4400>;
         qcom,chg-led-sw-controls;
@@ -58,10 +58,11 @@
         /delete-property/ qcom,parallel-usb-9v-min-current-ma;
         /delete-property/ qcom,parallel-allowed-lowering-ma;
         qcom,charge-unknown-battery;
+        dpdm-supply = <&usb_otg>;
         status = "okay";
 };
 
-&pmi8950_fg {
+&qpnp_fg {
         qcom,battery-data = <&qrd_batterydata>;
         qcom,bad-battery-detection-enable;
         qcom,hold-soc-while-full;
