--- a/arch/arm64/boot/dts/qcom/karatep/msm8937-pmi8950-karatep.dtsi
+++ b/arch/arm64/boot/dts/qcom/karatep/msm8937-pmi8950-karatep.dtsi
@@ -46,7 +46,7 @@
         qcom,platform-regulator-settings = [02 09 03 00 20 00 01];
 };
 
-&pmi8950_charger {
+&qpnp_smbcharger {
         qcom,battery-data = <&qrd_batterydata>;
         qcom,chg-led-sw-controls;
         qcom,chg-led-support;
@@ -58,10 +58,11 @@
         /delete-property/ qcom,parallel-usb-9v-min-current-ma;
         /delete-property/ qcom,parallel-allowed-lowering-ma;
         qcom,charge-unknown-battery;
+        dpdm-supply = <&usb_otg>;
         status = "okay";
 };
 
-&pmi8950_fg {
+&qpnp_fg {
         qcom,battery-data = <&qrd_batterydata>;
         qcom,bad-battery-detection-enable;
         qcom,hold-soc-while-full;
