arm64: dts: karate-common: Drop AVB 2.0

--- a/arch/arm64/boot/dts/qcom/karate-common/msm8937-lenovo-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/karate-common/msm8937-lenovo-common.dtsi
@@ -32,9 +32,11 @@
 
 &firmware {
 	android {
+		/delete-node/ vbmeta;
 		fstab {
 			vendor {
 				dev = "/dev/block/platform/soc/7824900.sdhci/by-name/preload";
+				fsmgr_flags = "wait";
 			};
 		};
 	};
